y.output
Grammar

    0 $accept: INICIO $end

    1 INICIO: INSTRUCCIONES

    2 INSTRUCCIONES: INSTRUCCIONES CONDICION
    3              | ID ASIGNACION RESOLVER '(' EXPRESION ')' ';'
    4              | IMPRIMIR '(' CADENA ')' ';'
    5              | EXPRESION ';'
    6              | CONDICION

    7 EXPRESION: OPERACION
    8          | ID

    9 OPERACION: EXPRESION '+' EXPRESION
   10          | EXPRESION '-' EXPRESION
   11          | EXPRESION '*' EXPRESION
   12          | EXPRESION '/' EXPRESION
   13          | EXPRESION IGUAL EXPRESION
   14          | EXPRESION DISTINTO EXPRESION
   15          | EXPRESION MENOR EXPRESION
   16          | EXPRESION MENOR_IGUAL EXPRESION
   17          | EXPRESION MAYOR EXPRESION
   18          | EXPRESION MAYOR_IGUAL EXPRESION
   19          | NUMERO

   20 CONDICION: IF '(' EXPRESION ')' BLOQUE
   21          | IF '(' EXPRESION ')' BLOQUE ELSE BLOQUE
   22          | WHILE '(' EXPRESION ')' BLOQUE

   23 BLOQUE: '{' INSTRUCCIONES '}'
   24       | '{' '}'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 3 4 20 21 22
    ')' (41) 3 4 20 21 22
    '*' (42) 11
    '+' (43) 9
    '-' (45) 10
    '/' (47) 12
    ';' (59) 3 4 5
    '{' (123) 23 24
    '}' (125) 23 24
    error (256)
    NUMERO <intval> (258) 19
    CADENA <cadena> (259) 4
    ID <id> (260) 3 8
    RESOLVER (261) 3
    IMPRIMIR (262) 4
    ASIGNACION (263) 3
    IGUAL (264) 13
    DISTINTO (265) 14
    MENOR (266) 15
    MENOR_IGUAL (267) 16
    MAYOR (268) 17
    MAYOR_IGUAL (269) 18
    IF (270) 20 21
    ELSE (271) 21
    WHILE (272) 22


Nonterminals, with rules where they appear

    $accept (27)
        on left: 0
    INICIO (28)
        on left: 1
        on right: 0
    INSTRUCCIONES (29)
        on left: 2 3 4 5 6
        on right: 1 2 23
    EXPRESION <intval> (30)
        on left: 7 8
        on right: 3 5 9 10 11 12 13 14 15 16 17 18 20 21 22
    OPERACION <intval> (31)
        on left: 9 10 11 12 13 14 15 16 17 18 19
        on right: 7
    CONDICION (32)
        on left: 20 21 22
        on right: 2 6
    BLOQUE (33)
        on left: 23 24
        on right: 20 21 22


State 0

    0 $accept: • INICIO $end

    NUMERO    shift, and go to state 1
    ID        shift, and go to state 2
    IMPRIMIR  shift, and go to state 3
    IF        shift, and go to state 4
    WHILE     shift, and go to state 5

    INICIO         go to state 6
    INSTRUCCIONES  go to state 7
    EXPRESION      go to state 8
    OPERACION      go to state 9
    CONDICION      go to state 10


State 1

   19 OPERACION: NUMERO •

    $default  reduce using rule 19 (OPERACION)


State 2

    3 INSTRUCCIONES: ID • ASIGNACION RESOLVER '(' EXPRESION ')' ';'
    8 EXPRESION: ID •

    ASIGNACION  shift, and go to state 11

    $default  reduce using rule 8 (EXPRESION)


State 3

    4 INSTRUCCIONES: IMPRIMIR • '(' CADENA ')' ';'

    '('  shift, and go to state 12


State 4

   20 CONDICION: IF • '(' EXPRESION ')' BLOQUE
   21          | IF • '(' EXPRESION ')' BLOQUE ELSE BLOQUE

    '('  shift, and go to state 13


State 5

   22 CONDICION: WHILE • '(' EXPRESION ')' BLOQUE

    '('  shift, and go to state 14


State 6

    0 $accept: INICIO • $end

    $end  shift, and go to state 15


State 7

    1 INICIO: INSTRUCCIONES •
    2 INSTRUCCIONES: INSTRUCCIONES • CONDICION

    IF     shift, and go to state 4
    WHILE  shift, and go to state 5

    $default  reduce using rule 1 (INICIO)

    CONDICION  go to state 16


State 8

    5 INSTRUCCIONES: EXPRESION • ';'
    9 OPERACION: EXPRESION • '+' EXPRESION
   10          | EXPRESION • '-' EXPRESION
   11          | EXPRESION • '*' EXPRESION
   12          | EXPRESION • '/' EXPRESION
   13          | EXPRESION • IGUAL EXPRESION
   14          | EXPRESION • DISTINTO EXPRESION
   15          | EXPRESION • MENOR EXPRESION
   16          | EXPRESION • MENOR_IGUAL EXPRESION
   17          | EXPRESION • MAYOR EXPRESION
   18          | EXPRESION • MAYOR_IGUAL EXPRESION

    IGUAL        shift, and go to state 17
    DISTINTO     shift, and go to state 18
    MENOR        shift, and go to state 19
    MENOR_IGUAL  shift, and go to state 20
    MAYOR        shift, and go to state 21
    MAYOR_IGUAL  shift, and go to state 22
    '+'          shift, and go to state 23
    '-'          shift, and go to state 24
    '*'          shift, and go to state 25
    '/'          shift, and go to state 26
    ';'          shift, and go to state 27


State 9

    7 EXPRESION: OPERACION •

    $default  reduce using rule 7 (EXPRESION)


State 10

    6 INSTRUCCIONES: CONDICION •

    $default  reduce using rule 6 (INSTRUCCIONES)


State 11

    3 INSTRUCCIONES: ID ASIGNACION • RESOLVER '(' EXPRESION ')' ';'

    RESOLVER  shift, and go to state 28


State 12

    4 INSTRUCCIONES: IMPRIMIR '(' • CADENA ')' ';'

    CADENA  shift, and go to state 29


State 13

   20 CONDICION: IF '(' • EXPRESION ')' BLOQUE
   21          | IF '(' • EXPRESION ')' BLOQUE ELSE BLOQUE

    NUMERO  shift, and go to state 1
    ID      shift, and go to state 30

    EXPRESION  go to state 31
    OPERACION  go to state 9


State 14

   22 CONDICION: WHILE '(' • EXPRESION ')' BLOQUE

    NUMERO  shift, and go to state 1
    ID      shift, and go to state 30

    EXPRESION  go to state 32
    OPERACION  go to state 9


State 15

    0 $accept: INICIO $end •

    $default  accept


State 16

    2 INSTRUCCIONES: INSTRUCCIONES CONDICION •

    $default  reduce using rule 2 (INSTRUCCIONES)


State 17

   13 OPERACION: EXPRESION IGUAL • EXPRESION

    NUMERO  shift, and go to state 1
    ID      shift, and go to state 30

    EXPRESION  go to state 33
    OPERACION  go to state 9


State 18

   14 OPERACION: EXPRESION DISTINTO • EXPRESION

    NUMERO  shift, and go to state 1
    ID      shift, and go to state 30

    EXPRESION  go to state 34
    OPERACION  go to state 9


State 19

   15 OPERACION: EXPRESION MENOR • EXPRESION

    NUMERO  shift, and go to state 1
    ID      shift, and go to state 30

    EXPRESION  go to state 35
    OPERACION  go to state 9


State 20

   16 OPERACION: EXPRESION MENOR_IGUAL • EXPRESION

    NUMERO  shift, and go to state 1
    ID      shift, and go to state 30

    EXPRESION  go to state 36
    OPERACION  go to state 9


State 21

   17 OPERACION: EXPRESION MAYOR • EXPRESION

    NUMERO  shift, and go to state 1
    ID      shift, and go to state 30

    EXPRESION  go to state 37
    OPERACION  go to state 9


State 22

   18 OPERACION: EXPRESION MAYOR_IGUAL • EXPRESION

    NUMERO  shift, and go to state 1
    ID      shift, and go to state 30

    EXPRESION  go to state 38
    OPERACION  go to state 9


State 23

    9 OPERACION: EXPRESION '+' • EXPRESION

    NUMERO  shift, and go to state 1
    ID      shift, and go to state 30

    EXPRESION  go to state 39
    OPERACION  go to state 9


State 24

   10 OPERACION: EXPRESION '-' • EXPRESION

    NUMERO  shift, and go to state 1
    ID      shift, and go to state 30

    EXPRESION  go to state 40
    OPERACION  go to state 9


State 25

   11 OPERACION: EXPRESION '*' • EXPRESION

    NUMERO  shift, and go to state 1
    ID      shift, and go to state 30

    EXPRESION  go to state 41
    OPERACION  go to state 9


State 26

   12 OPERACION: EXPRESION '/' • EXPRESION

    NUMERO  shift, and go to state 1
    ID      shift, and go to state 30

    EXPRESION  go to state 42
    OPERACION  go to state 9


State 27

    5 INSTRUCCIONES: EXPRESION ';' •

    $default  reduce using rule 5 (INSTRUCCIONES)


State 28

    3 INSTRUCCIONES: ID ASIGNACION RESOLVER • '(' EXPRESION ')' ';'

    '('  shift, and go to state 43


State 29

    4 INSTRUCCIONES: IMPRIMIR '(' CADENA • ')' ';'

    ')'  shift, and go to state 44


State 30

    8 EXPRESION: ID •

    $default  reduce using rule 8 (EXPRESION)


State 31

    9 OPERACION: EXPRESION • '+' EXPRESION
   10          | EXPRESION • '-' EXPRESION
   11          | EXPRESION • '*' EXPRESION
   12          | EXPRESION • '/' EXPRESION
   13          | EXPRESION • IGUAL EXPRESION
   14          | EXPRESION • DISTINTO EXPRESION
   15          | EXPRESION • MENOR EXPRESION
   16          | EXPRESION • MENOR_IGUAL EXPRESION
   17          | EXPRESION • MAYOR EXPRESION
   18          | EXPRESION • MAYOR_IGUAL EXPRESION
   20 CONDICION: IF '(' EXPRESION • ')' BLOQUE
   21          | IF '(' EXPRESION • ')' BLOQUE ELSE BLOQUE

    IGUAL        shift, and go to state 17
    DISTINTO     shift, and go to state 18
    MENOR        shift, and go to state 19
    MENOR_IGUAL  shift, and go to state 20
    MAYOR        shift, and go to state 21
    MAYOR_IGUAL  shift, and go to state 22
    '+'          shift, and go to state 23
    '-'          shift, and go to state 24
    '*'          shift, and go to state 25
    '/'          shift, and go to state 26
    ')'          shift, and go to state 45


State 32

    9 OPERACION: EXPRESION • '+' EXPRESION
   10          | EXPRESION • '-' EXPRESION
   11          | EXPRESION • '*' EXPRESION
   12          | EXPRESION • '/' EXPRESION
   13          | EXPRESION • IGUAL EXPRESION
   14          | EXPRESION • DISTINTO EXPRESION
   15          | EXPRESION • MENOR EXPRESION
   16          | EXPRESION • MENOR_IGUAL EXPRESION
   17          | EXPRESION • MAYOR EXPRESION
   18          | EXPRESION • MAYOR_IGUAL EXPRESION
   22 CONDICION: WHILE '(' EXPRESION • ')' BLOQUE

    IGUAL        shift, and go to state 17
    DISTINTO     shift, and go to state 18
    MENOR        shift, and go to state 19
    MENOR_IGUAL  shift, and go to state 20
    MAYOR        shift, and go to state 21
    MAYOR_IGUAL  shift, and go to state 22
    '+'          shift, and go to state 23
    '-'          shift, and go to state 24
    '*'          shift, and go to state 25
    '/'          shift, and go to state 26
    ')'          shift, and go to state 46


State 33

    9 OPERACION: EXPRESION • '+' EXPRESION
   10          | EXPRESION • '-' EXPRESION
   11          | EXPRESION • '*' EXPRESION
   12          | EXPRESION • '/' EXPRESION
   13          | EXPRESION • IGUAL EXPRESION
   13          | EXPRESION IGUAL EXPRESION •
   14          | EXPRESION • DISTINTO EXPRESION
   15          | EXPRESION • MENOR EXPRESION
   16          | EXPRESION • MENOR_IGUAL EXPRESION
   17          | EXPRESION • MAYOR EXPRESION
   18          | EXPRESION • MAYOR_IGUAL EXPRESION

    $default  reduce using rule 13 (OPERACION)


State 34

    9 OPERACION: EXPRESION • '+' EXPRESION
   10          | EXPRESION • '-' EXPRESION
   11          | EXPRESION • '*' EXPRESION
   12          | EXPRESION • '/' EXPRESION
   13          | EXPRESION • IGUAL EXPRESION
   14          | EXPRESION • DISTINTO EXPRESION
   14          | EXPRESION DISTINTO EXPRESION •
   15          | EXPRESION • MENOR EXPRESION
   16          | EXPRESION • MENOR_IGUAL EXPRESION
   17          | EXPRESION • MAYOR EXPRESION
   18          | EXPRESION • MAYOR_IGUAL EXPRESION

    $default  reduce using rule 14 (OPERACION)


State 35

    9 OPERACION: EXPRESION • '+' EXPRESION
   10          | EXPRESION • '-' EXPRESION
   11          | EXPRESION • '*' EXPRESION
   12          | EXPRESION • '/' EXPRESION
   13          | EXPRESION • IGUAL EXPRESION
   14          | EXPRESION • DISTINTO EXPRESION
   15          | EXPRESION • MENOR EXPRESION
   15          | EXPRESION MENOR EXPRESION •
   16          | EXPRESION • MENOR_IGUAL EXPRESION
   17          | EXPRESION • MAYOR EXPRESION
   18          | EXPRESION • MAYOR_IGUAL EXPRESION

    $default  reduce using rule 15 (OPERACION)


State 36

    9 OPERACION: EXPRESION • '+' EXPRESION
   10          | EXPRESION • '-' EXPRESION
   11          | EXPRESION • '*' EXPRESION
   12          | EXPRESION • '/' EXPRESION
   13          | EXPRESION • IGUAL EXPRESION
   14          | EXPRESION • DISTINTO EXPRESION
   15          | EXPRESION • MENOR EXPRESION
   16          | EXPRESION • MENOR_IGUAL EXPRESION
   16          | EXPRESION MENOR_IGUAL EXPRESION •
   17          | EXPRESION • MAYOR EXPRESION
   18          | EXPRESION • MAYOR_IGUAL EXPRESION

    $default  reduce using rule 16 (OPERACION)


State 37

    9 OPERACION: EXPRESION • '+' EXPRESION
   10          | EXPRESION • '-' EXPRESION
   11          | EXPRESION • '*' EXPRESION
   12          | EXPRESION • '/' EXPRESION
   13          | EXPRESION • IGUAL EXPRESION
   14          | EXPRESION • DISTINTO EXPRESION
   15          | EXPRESION • MENOR EXPRESION
   16          | EXPRESION • MENOR_IGUAL EXPRESION
   17          | EXPRESION • MAYOR EXPRESION
   17          | EXPRESION MAYOR EXPRESION •
   18          | EXPRESION • MAYOR_IGUAL EXPRESION

    $default  reduce using rule 17 (OPERACION)


State 38

    9 OPERACION: EXPRESION • '+' EXPRESION
   10          | EXPRESION • '-' EXPRESION
   11          | EXPRESION • '*' EXPRESION
   12          | EXPRESION • '/' EXPRESION
   13          | EXPRESION • IGUAL EXPRESION
   14          | EXPRESION • DISTINTO EXPRESION
   15          | EXPRESION • MENOR EXPRESION
   16          | EXPRESION • MENOR_IGUAL EXPRESION
   17          | EXPRESION • MAYOR EXPRESION
   18          | EXPRESION • MAYOR_IGUAL EXPRESION
   18          | EXPRESION MAYOR_IGUAL EXPRESION •

    $default  reduce using rule 18 (OPERACION)


State 39

    9 OPERACION: EXPRESION • '+' EXPRESION
    9          | EXPRESION '+' EXPRESION •
   10          | EXPRESION • '-' EXPRESION
   11          | EXPRESION • '*' EXPRESION
   12          | EXPRESION • '/' EXPRESION
   13          | EXPRESION • IGUAL EXPRESION
   14          | EXPRESION • DISTINTO EXPRESION
   15          | EXPRESION • MENOR EXPRESION
   16          | EXPRESION • MENOR_IGUAL EXPRESION
   17          | EXPRESION • MAYOR EXPRESION
   18          | EXPRESION • MAYOR_IGUAL EXPRESION

    IGUAL        shift, and go to state 17
    DISTINTO     shift, and go to state 18
    MENOR        shift, and go to state 19
    MENOR_IGUAL  shift, and go to state 20
    MAYOR        shift, and go to state 21
    MAYOR_IGUAL  shift, and go to state 22
    '*'          shift, and go to state 25
    '/'          shift, and go to state 26

    $default  reduce using rule 9 (OPERACION)


State 40

    9 OPERACION: EXPRESION • '+' EXPRESION
   10          | EXPRESION • '-' EXPRESION
   10          | EXPRESION '-' EXPRESION •
   11          | EXPRESION • '*' EXPRESION
   12          | EXPRESION • '/' EXPRESION
   13          | EXPRESION • IGUAL EXPRESION
   14          | EXPRESION • DISTINTO EXPRESION
   15          | EXPRESION • MENOR EXPRESION
   16          | EXPRESION • MENOR_IGUAL EXPRESION
   17          | EXPRESION • MAYOR EXPRESION
   18          | EXPRESION • MAYOR_IGUAL EXPRESION

    IGUAL        shift, and go to state 17
    DISTINTO     shift, and go to state 18
    MENOR        shift, and go to state 19
    MENOR_IGUAL  shift, and go to state 20
    MAYOR        shift, and go to state 21
    MAYOR_IGUAL  shift, and go to state 22
    '*'          shift, and go to state 25
    '/'          shift, and go to state 26

    $default  reduce using rule 10 (OPERACION)


State 41

    9 OPERACION: EXPRESION • '+' EXPRESION
   10          | EXPRESION • '-' EXPRESION
   11          | EXPRESION • '*' EXPRESION
   11          | EXPRESION '*' EXPRESION •
   12          | EXPRESION • '/' EXPRESION
   13          | EXPRESION • IGUAL EXPRESION
   14          | EXPRESION • DISTINTO EXPRESION
   15          | EXPRESION • MENOR EXPRESION
   16          | EXPRESION • MENOR_IGUAL EXPRESION
   17          | EXPRESION • MAYOR EXPRESION
   18          | EXPRESION • MAYOR_IGUAL EXPRESION

    IGUAL        shift, and go to state 17
    DISTINTO     shift, and go to state 18
    MENOR        shift, and go to state 19
    MENOR_IGUAL  shift, and go to state 20
    MAYOR        shift, and go to state 21
    MAYOR_IGUAL  shift, and go to state 22

    $default  reduce using rule 11 (OPERACION)


State 42

    9 OPERACION: EXPRESION • '+' EXPRESION
   10          | EXPRESION • '-' EXPRESION
   11          | EXPRESION • '*' EXPRESION
   12          | EXPRESION • '/' EXPRESION
   12          | EXPRESION '/' EXPRESION •
   13          | EXPRESION • IGUAL EXPRESION
   14          | EXPRESION • DISTINTO EXPRESION
   15          | EXPRESION • MENOR EXPRESION
   16          | EXPRESION • MENOR_IGUAL EXPRESION
   17          | EXPRESION • MAYOR EXPRESION
   18          | EXPRESION • MAYOR_IGUAL EXPRESION

    IGUAL        shift, and go to state 17
    DISTINTO     shift, and go to state 18
    MENOR        shift, and go to state 19
    MENOR_IGUAL  shift, and go to state 20
    MAYOR        shift, and go to state 21
    MAYOR_IGUAL  shift, and go to state 22

    $default  reduce using rule 12 (OPERACION)


State 43

    3 INSTRUCCIONES: ID ASIGNACION RESOLVER '(' • EXPRESION ')' ';'

    NUMERO  shift, and go to state 1
    ID      shift, and go to state 30

    EXPRESION  go to state 47
    OPERACION  go to state 9


State 44

    4 INSTRUCCIONES: IMPRIMIR '(' CADENA ')' • ';'

    ';'  shift, and go to state 48


State 45

   20 CONDICION: IF '(' EXPRESION ')' • BLOQUE
   21          | IF '(' EXPRESION ')' • BLOQUE ELSE BLOQUE

    '{'  shift, and go to state 49

    BLOQUE  go to state 50


State 46

   22 CONDICION: WHILE '(' EXPRESION ')' • BLOQUE

    '{'  shift, and go to state 49

    BLOQUE  go to state 51


State 47

    3 INSTRUCCIONES: ID ASIGNACION RESOLVER '(' EXPRESION • ')' ';'
    9 OPERACION: EXPRESION • '+' EXPRESION
   10          | EXPRESION • '-' EXPRESION
   11          | EXPRESION • '*' EXPRESION
   12          | EXPRESION • '/' EXPRESION
   13          | EXPRESION • IGUAL EXPRESION
   14          | EXPRESION • DISTINTO EXPRESION
   15          | EXPRESION • MENOR EXPRESION
   16          | EXPRESION • MENOR_IGUAL EXPRESION
   17          | EXPRESION • MAYOR EXPRESION
   18          | EXPRESION • MAYOR_IGUAL EXPRESION

    IGUAL        shift, and go to state 17
    DISTINTO     shift, and go to state 18
    MENOR        shift, and go to state 19
    MENOR_IGUAL  shift, and go to state 20
    MAYOR        shift, and go to state 21
    MAYOR_IGUAL  shift, and go to state 22
    '+'          shift, and go to state 23
    '-'          shift, and go to state 24
    '*'          shift, and go to state 25
    '/'          shift, and go to state 26
    ')'          shift, and go to state 52


State 48

    4 INSTRUCCIONES: IMPRIMIR '(' CADENA ')' ';' •

    $default  reduce using rule 4 (INSTRUCCIONES)


State 49

   23 BLOQUE: '{' • INSTRUCCIONES '}'
   24       | '{' • '}'

    NUMERO    shift, and go to state 1
    ID        shift, and go to state 2
    IMPRIMIR  shift, and go to state 3
    IF        shift, and go to state 4
    WHILE     shift, and go to state 5
    '}'       shift, and go to state 53

    INSTRUCCIONES  go to state 54
    EXPRESION      go to state 8
    OPERACION      go to state 9
    CONDICION      go to state 10


State 50

   20 CONDICION: IF '(' EXPRESION ')' BLOQUE •
   21          | IF '(' EXPRESION ')' BLOQUE • ELSE BLOQUE

    ELSE  shift, and go to state 55

    $default  reduce using rule 20 (CONDICION)


State 51

   22 CONDICION: WHILE '(' EXPRESION ')' BLOQUE •

    $default  reduce using rule 22 (CONDICION)


State 52

    3 INSTRUCCIONES: ID ASIGNACION RESOLVER '(' EXPRESION ')' • ';'

    ';'  shift, and go to state 56


State 53

   24 BLOQUE: '{' '}' •

    $default  reduce using rule 24 (BLOQUE)


State 54

    2 INSTRUCCIONES: INSTRUCCIONES • CONDICION
   23 BLOQUE: '{' INSTRUCCIONES • '}'

    IF     shift, and go to state 4
    WHILE  shift, and go to state 5
    '}'    shift, and go to state 57

    CONDICION  go to state 16


State 55

   21 CONDICION: IF '(' EXPRESION ')' BLOQUE ELSE • BLOQUE

    '{'  shift, and go to state 49

    BLOQUE  go to state 58


State 56

    3 INSTRUCCIONES: ID ASIGNACION RESOLVER '(' EXPRESION ')' ';' •

    $default  reduce using rule 3 (INSTRUCCIONES)


State 57

   23 BLOQUE: '{' INSTRUCCIONES '}' •

    $default  reduce using rule 23 (BLOQUE)


State 58

   21 CONDICION: IF '(' EXPRESION ')' BLOQUE ELSE BLOQUE •

    $default  reduce using rule 21 (CONDICION)
